# sccpt

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  __main__.py  mcp_server_cam.py  mcp_server_sccpt.py  pyproject.toml  run_pytests.sh  run_tests.sh  sccpt  setup.py
.dev/multi-desktop/: DEMO_RESULTS.md  README.md  multi_desktop_capture.py
.dev/multi-desktop/powershell/: detect_monitors_and_desktops.ps1
.dev/multi-desktop/tests/: test_detection.py
docs/: create_demo_gifs.py
mcp_servers/: README.md  mcp_server_fastmcp.py
sccpt/: __init__.py  utils.py
src/cam/: __init__.py  __main__.py  capture.py  cli.py  gif.py  session.py  utils.py
src/cam/powershell/: capture_url.ps1
src/cammy/: __init__.py  __main__.py  capture.py  cli.py  gif.py  session.py  utils.py
src/sccpt/: __init__.py  capture.py  gif.py  session.py  utils.py
tests/: __init__.py  conftest.py  test_mcp_server.py  test_sccpt.py
